--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ nav {
 nav ul{
   display: flex;
   justify-content: center;
+  padding: 0;
 }
 
 .logo {
@@ -82,7 +83,7 @@ header nav ul li {
 header nav ul li a {
   color: #fff;
   text-decoration: none;
-  padding: 0 20px 0 0;
+  padding: 0 10px;
 }
 
 header nav ul li a:hover {
